implementacion con el frontend