@@ -1,12 +1,17 @@
 package com.semestre5.ProAula.SConfig;
 
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -17,58 +22,48 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-//    @Bean
-//    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-//        return  http
-//                .csrf(csrf-> csrf
-//                        .disable())
-//                .authorizeHttpRequests(authRequest -> authRequest
-//                        .requestMatchers("/", "/user/**").permitAll()
-//                        .anyRequest().authenticated()
-//                )
-//                .build();
-//    }
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(authRequest -> authRequest
-
-                        .requestMatchers("/", "/user/registrar").permitAll()
-
-                        .requestMatchers(HttpMethod.POST, "/api/login").permitAll() // Permite el acceso al endpoint de login personalizado
-
+        http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // <-- 1. APLICAR CORS
+                .csrf(csrf -> csrf.disable()) // <-- 2. DESHABILITAR CSRF (Recomendado para empezar con API+React)
+                .authorizeHttpRequests(authz -> authz
+                        // Permitir acceso público a estas rutas:
+                        .requestMatchers("/", "/index.html", "/favicon.ico", "/manifest.json", "/static/**").permitAll()
+                        .requestMatchers("/api/login").permitAll() // API de Login
+                        .requestMatchers("/registrar", "/registrarView").permitAll() // API y vista de Registro
+                       
+                        // .requestMatchers("/dashboard").authenticated()
+                        // Todas las demás rutas requieren autenticación por defecto
                         .anyRequest().authenticated()
-                )
-                
-                // .httpBasic(Customizer.withDefaults()) // Si quieres habilitar Basic Auth también
-                .build();
+                );
+        return http.build();
+    }
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        // Origen de tu frontend React (ajusta el puerto si es diferente)
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://127.0.0.1:3000")); // O el puerto donde corra tu React
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*")); // O especifica cabeceras como "Authorization", "Content-Type"
-        configuration.setAllowCredentials(true);// Permitir credenciales (si usas cookies o autenticación basada en sesión/tokens)
-
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type")); // Headers comunes para API
+        configuration.setAllowCredentials(true); // Importante si manejas cookies/sesiones
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplica esta configuración a todas las rutas
+        source.registerCorsConfiguration("/**", configuration); // Aplicar CORS a todas las rutas
         return source;
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder(){
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-
 }
